--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,25 @@ dependencies:
   flutter_lorem: ^1.1.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   cupertino_icons: ^0.1.3
+  provider: ^4.0.4
+  shared_preferences: ^0.5.8
+  page_transition: ^1.1.5
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   pedantic: ^1.9.0
 
-
 flutter:
   uses-material-design: true
+
+  assets:
+    - "assets/"
+    - "assets/images/"
+    - "assets/language/"
+
